Fix alignment research mobile

--- a/_scss/partials/_other-projects.scss
+++ b/_scss/partials/_other-projects.scss
@@ -1,8 +1,6 @@
 .other-projects {
   .project {
     margin-bottom: 30px;
-    display: flex;
-    justify-content: space-between;
     @include tablet {
       width: 100%;
       display: block;
